--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -1,7 +1,6 @@
 \section{Introduction}
 %
-The differential cross-section $\d \sigma/\d t$ of nuclear proton-%\linebreak
-(anti)proton 
+The differential cross-section $\d \sigma/\d t$ of hadronic proton-(anti)proton 
 scattering at low $|t|$ has traditionally been parametrised with a simple 
 exponential function, ${\rm e}^{-B |t|}$, giving a satisfactory description of 
 all past experimental data.
