--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -6,6 +6,8 @@
 
 \begin{figure}
 \begin{center}
+% Do not scale the graphics - fonts have been adjusted to match with figure caption.
+% If needed, ask for a different size at jan.kaspar@cern.ch.
 \includegraphics{fig/t_dist.pdf}
 \caption{%
 Differential cross-section using ``optimised'' binning, as given in Table~\ref{tab:data}.
@@ -76,6 +78,8 @@ $3$ & $25.5/26 = 0.98$ & $0.49$ & $0.69\un{\sigma}$ \cr
 \begin{figure*}
 \vskip-5mm
 \begin{center}
+% Do not scale the graphics - fonts have been adjusted to match with figure caption.
+% If needed, ask for a different size at jan.kaspar@cern.ch.
 \includegraphics{fig/t_dist_rel_with_fits.pdf}
 \vskip-4mm
 \caption{%
@@ -150,6 +154,8 @@ prob_A+B = 5.297602E-15
 
 \begin{figure*}
 \begin{center}
+% Do not scale the graphics - fonts have been adjusted to match with figure caption.
+% If needed, ask for a different size at jan.kaspar@cern.ch.
 \includegraphics{fig/t_dist_rel_with_split_fit.pdf}
 \vskip-4mm
 \caption{%
