--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -17,7 +17,7 @@ Differential cross-section using ``optimised'' binning, as given in Table~\ref{t
 \end{figure}
 
 
-The final differential cross-section in the ``optimised'' binning is presented in Table~\ref{tab:data} and Figure \ref{fig:data ob}. In order to visualise small deviations from the leading pure-exponential behaviour, Figure~\ref{fig:data rel ob} shows the relative difference of the cross-section from a reference exponential. This plot immediately suggests a non-exponentiality of the data -- pure exponentials would look as (almost) linear functions in this reference frame.
+The final differential cross-section in the ``optimised'' binning is presented in Table~\ref{tab:data} and Figure \ref{fig:data ob}. In order to visualise small deviations from the leading pure-exponential behaviour, Figure~\ref{fig:data rel ob} shows the relative difference of the cross-section from a reference exponential. This plot immediately suggests a non-exponentiality of the data: pure exponentials would look like (almost) linear functions in this reference frame.
 
 To study the detailed behaviour of the differential cross-section, a series of fits has been made using the parametrisation:
 \begin{equation}
@@ -35,7 +35,7 @@ where $\Delta$ is a vector of differences between the differential cross-section
 
 The quality of fits is judged on the basis of several measures. The first is the value of $\chi^2$ after minimisation divided by the number of degrees of freedom (ndf). Secondly, the p-value stands for the probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Eventually, significance means the half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value. The significance is expressed in multiples of sigma, the standard deviation of the normal distribution.
 
-Figure~\ref{fig:data rel ob} shows several fits of the differential cross-section with the parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent, $N_b$. The corresponding fit quality is given in Table~\ref{tab:fits ob}, clearly indicating that the purely exponential fit ($N_b = 1$) is excluded at $7.2\un{\sigma}$ significance.
+Figure~\ref{fig:data rel ob} shows several fits of the differential cross-section with the parametrisation in Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent, $N_b$. The corresponding fit quality is given in Table~\ref{tab:fits ob}, indicating that the purely exponential fit ($N_b = 1$) is excluded at $7.2\un{\sigma}$ significance.
 %
 The other two fits ($N_b = 2, 3$) are of reasonable quality and can, therefore, be used for a total cross-section estimation with the optical theorem in the form
 \begin{equation}
@@ -120,7 +120,7 @@ where $\mat V_p$ is the covariance matrix for the difference vector $\Delta_p$. 
  B1 − B2 = −0.414 ± 0.056 ⇒ 7.4 σ
 \fi
 
-Since parameters estimated with the least squares method are unbiased, the test in Eq.~(\ref{eq:chi sq param}) is asymptotically binning independent. Indeed, applying it to the data in the ``optimised'' binning (prior to the statistical uncertainty rescaling, Section \ref{sec:stat unc adj}) yields $\chi^2_p = 65.7$ which corresponds to a significance of $7.8\un{\sigma}$. After the uncertainty rescaling, the exclusion significance increases even to $9.0\un{\sigma}$.
+Since parameters estimated with the least squares method are unbiased, the test in Eq.~(\ref{eq:chi sq param}) is asymptotically binning independent. Indeed, applying it to the data in the ``optimised'' binning (prior to the statistical uncertainty rescaling, Section \ref{sec:stat unc adj}) yields $\chi^2_p = 65.7$ which corresponds to a significance of $7.8\un{\sigma}$. After the uncertainty rescaling, the exclusion significance increases to $9.0\un{\sigma}$.
 
 \iffalse
 DS4-sc, ob
