--- a/2014/90m paper/conclusion.tex
+++ b/2014/90m paper/conclusion.tex
@@ -9,7 +9,7 @@ are described satisfactorily with an exponent linear or quadratic in $t$.
 Using this refined parametrisation for the extrapolation to the optical point,
 $t = 0$, yields a total cross-section compatible with the previous measurement.
 
-In an upcoming article, this proof of non-exponentiality in a 
+In an upcoming analysis, this proof of non-exponentiality in a 
 $t$-domain strongly
 dominated by hadronic interactions will be combined with a measurement of 
 elastic scattering in the Coulomb-nuclear interference region, aiming at 
