--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -135,7 +135,7 @@ NKTH-OTKA grant 74458 (Hungary).
 \bibitem{totem-optics}
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
-	arXiv:1406.0546, accepted by New Journal of Physics.
+	New J. Phys. 16 (2014) 103041.
 
 \bibitem{op-elog} CERN BE-OP eLogbook: \url{https://www.cern.ch/ab-dep-op-elogbook/elogbook/secure/eLogbook.php?shiftId=1045825}
 
