--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -119,7 +119,8 @@ NKTH-OTKA grant 74458 (Hungary).
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
 
-\bibitem{alfa} \Name{The ATLAS Collaboration} ATLAS-CONF-2014-040.
+\bibitem{alfa} \Name{The ATLAS Collaboration} 
+               \REVIEW{Nucl.~Phys.}{B889}{2014}{486-548}
 
 \bibitem{totem-jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
